# tensor-splines

./: .gitignore  LICENSE  README.md  flake.nix  pyproject.toml
nix/pkgs/tensor-spline/: default.nix
notebooks/: .gitignore  demo.ipynb
tensor-splines/: integral.py
tensor_splines/: __init__.py  integral.py  solvers.py  spiro.py
tests/: test_spiro.py
