[tool.poetry]
name = "tensor-splines"
version = "0.5.0"
description = "An utility library to generate splines with tensor-based batch operation support."
authors = ["Break Yang <yiqing.yang@horizon.ai>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.7,<3.11"
matplotlib = "^3.5.2"
numpy = "^1.21.5"
torch = "^1.8.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
